[package]
name = "wycheproof-rust"
version = "0.1.0"
authors = ["Varad Gautam <varad.gautam@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
syscalls = "0.3.3"
